[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydestiny-bio"
version = "0.1.0"
description = "Pure-Python port of destiny — diffusion maps + DPT for single-cell RNA-seq (Angerer et al. 2016)."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Zehua Zeng", email = "starlitnightly@163.com" }]
keywords = ["single-cell", "scRNA-seq", "diffusion-map", "dpt", "destiny"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = ["numpy>=1.23", "scipy>=1.10", "pandas>=1.5"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/omicverse/py-destiny"
Repository = "https://github.com/omicverse/py-destiny"
"Upstream R package" = "https://github.com/theislab/destiny"

[tool.setuptools.packages.find]
include = ["pydestiny*"]
exclude = ["tests*", "examples*", "destiny-ref*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning", "ignore::RuntimeWarning"]
